--- a/static/frontend/reddit-app/angular/src/app/app.component.html
+++ b/static/frontend/reddit-app/angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="">
   <mat-toolbar color="secondary" class="header shadow-sm" *ngIf="!authRoute">
     <div class="nav-links">
-      <img src="../assets/favicon/apple-touch-icon.png" alt="Icon" height="30" width="30">
+      <img src="assets/favicon/apple-touch-icon.png" alt="Icon" height="30" width="30">
       <a mat-flat-button [routerLink]="['']" class="font-bold color-primary navbar-brand" style="text-decoration:none">
         Django Reddit
       </a>
